# dogsled

./: .gitignore  .prospector.yaml  .readthedocs.yml  MANIFEST.in  README.md  environment.yml  pyproject.toml  requirements.txt  setup.cfg  win_environment.yml
.github/workflows/: main.yml
docs/source/: api.rst  conf.py  index.rst  installation.rst  quickstart.rst  references.bib
docs/source/_static/css/: custom.css
dogsled/: __init__.py  __main__.py  config.py  defaults.py  errors.py  libvips_downloader.py  normaliser.py  paths.py  resources.py  slides.py  user_input.py
dogsled/tests/: .coveragerc  conftest.py  test_defaults.py  test_libvips_download.py  test_normaliser.py  test_paths.py  test_resources.py  test_slides.py  test_user_input.py
dogsled/tests/test_normaliser/: he_CMU-1-Small-Region.tif  sector_he.npz  sector_img.npz  sector_max_s.npz  sector_od.npz  sector_s_cut.npz  sector_s_final.npz  sector_wrapped_arrays.npz  slide_sector.npz  small_test_data.pkl
