[metadata]
name = dogsled
version = 0.0.2
author = Dmitri Stepanov
author_email = dmitri.stepanov1@gmail.com
description = Medical slide normalisation
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/RhDm/dogsled
project_urls =
    Bug Tracker = https://github.com/RhDm/dogsled/issues
classifiers =
    Development Status :: 2 - Pre-Alpha
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: MacOS
    Operating System :: Unix

[options]
packages = find:
python_requires = >=3.6
install_requires =
    paquo>=0.4.0
    dynaconf>=3.1.7
    numpy>=1.21.4
    psutil>=5.8.0
    pyvips>=2.1.16
    scipy>=1.7.3
    numba>=0.53.1

[options.packages.find]
exclude = *.tests

[options.extras_require]
docs =
    sphinx
    pydata-sphinx-theme
    sphinxcontrib-bibtex

dev =
    pytest>=6
    pytest-cov
    line-profiler>=3.3.1
    memory-profiler>=0.58.0